--- a/appsettings.json
+++ b/appsettings.json
@@ -6,6 +6,10 @@
     }
   },
   "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "C9LpKz^s48*BpLwAq9xRdPz2M4J^Y3t6Fp%QfWt^QfL2Z8sT$Y",
+    "Issuer": "x.x.x.x"
+  },
   "ApiBaseUrls": {
     "EcoBinAuthService": "http://localhost:6117",
     "EcoBinSensorDataService": "http://localhost:6028",
