appsettings.Development.json untracked

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,10 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ApiBaseUrls": {
-    "EcoBinAuthService": "http://localhost:6117",
-    "EcoBinSensorDataService": "http://localhost:6028",
-    "EcoBinUserDataService": "http://localhost:6274"
-  }
+  "AllowedHosts": "*"
 }
